--- a/web/htmlTemplate/bloglist.html
+++ b/web/htmlTemplate/bloglist.html
@@ -6,8 +6,8 @@
 	<title>Learnik Blog</title>
 	<link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> <!-- https://fonts.google.com/ -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/templatemo-learnik-blog.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/templatemo-learnik-blog.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">  
 
 </head>
@@ -105,7 +105,7 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-60">
                         <div class="tm-post-link-inner">
-                            <img src="img/img-01.jpg" alt="Image" class="img-fluid">                            
+                            <img src="../img/img-01.jpg" alt="Image" class="img-fluid">                            
                         </div>
                         <span class="position-absolute tm-new-badge">New</span>
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">Simple and useful HTML layout</h2>
@@ -128,7 +128,7 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-60">
                         <div class=" tm-post-link-inner">
-                            <img src="img/img-02.jpg" alt="Image" class="img-fluid">                            
+                            <img src="../img/img-02.jpg" alt="Image" class="img-fluid">                            
                         </div>
                         <span class="position-absolute tm-new-badge">New</span>
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">Multi-purpose blog template</h2>
@@ -151,7 +151,7 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-20">
                         <div class="tm-post-link-inner">
-                            <img src="img/img-03.jpg" alt="Image" class="img-fluid">
+                            <img src="../img/img-03.jpg" alt="Image" class="img-fluid">
                         </div>
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">Lập trình viên cần học những gì ?</h2>
                     </a>                    
@@ -175,7 +175,7 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-20">
                         <div class="tm-post-link-inner">
-                            <img src="img/img-04.jpg" alt="Image" class="img-fluid">
+                            <img src="../img/img-04.jpg" alt="Image" class="img-fluid">
                         </div>
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">Giữ năng lượng khi học và làm lập trình.</h2>
                     </a>                    
@@ -199,7 +199,7 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-20">
                         <div class="tm-post-link-inner">
-                            <img src="img/img-05.jpg" alt="Image" class="img-fluid">
+                            <img src="../img/img-05.jpg" alt="Image" class="img-fluid">
                         </div>
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">Color hexa values of Learnik Blog</h2>
                     </a>                    
@@ -223,7 +223,7 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-20">
                         <div class="tm-post-link-inner">
-                            <img src="img/img-06.jpg" alt="Image" class="img-fluid">
+                            <img src="../img/img-06.jpg" alt="Image" class="img-fluid">
                         </div>
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">Donec convallis varius risus</h2>
                     </a>                    
@@ -253,7 +253,7 @@
             </footer>
         </main>
     </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/templatemo-script.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/templatemo-script.js"></script>
 </body>
 </html>
