--- a/web/htmlTemplate/post.html
+++ b/web/htmlTemplate/post.html
@@ -6,8 +6,8 @@
 	<title>Learnik Blog</title>
 	<link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> <!-- https://fonts.google.com/ -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/templatemo-learnik-blog.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/templatemo-learnik-blog.css" rel="stylesheet">
 </head>
 <body>
 	<header class="tm-header" id="tm-header">
