Update to merge v2

--- a/web/text_descriptions/lesson_3_text.html
+++ b/web/text_descriptions/lesson_3_text.html
@@ -11,7 +11,7 @@
 
     <h2>Non-verbal Communication</h2>
     <p>Non-verbal communication includes body language, facial expressions, and eye contact. These signals can greatly influence how messages are perceived by others.</p>
-    <img src="/img/imgTest" alt="Non-verbal Communication Tips" width="600">
+    <img src="/img/img1.png" alt="Non-verbal Communication Tips" width="600">
 
     <h2>Active Listening</h2>
     <p>Active listening is crucial for ensuring that both parties in a conversation understand each other. It involves not only hearing what is being said but also understanding the underlying message and responding thoughtfully.</p>
