Update to merge

--- a/web/text_descriptions/lesson_3_text.html
+++ b/web/text_descriptions/lesson_3_text.html
@@ -1,22 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Workplace Communication Guide</title>
-</head>
-<body>
-    <h1>Effective Workplace Communication</h1>
-    <p>Workplace communication is essential for ensuring that teams work efficiently and collaboratively. Effective communication involves understanding both verbal and non-verbal cues, listening actively, and providing constructive feedback.</p>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Workplace Communication Guide</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #f0f0f0;
+                color: #333;
+                line-height: 1.6;
+                margin: 0;
+                padding: 0;
+                ;  /* Giảm kích thước chữ cho toàn bộ body */
+            }
 
-    <h2>Non-verbal Communication</h2>
-    <p>Non-verbal communication includes body language, facial expressions, and eye contact. These signals can greatly influence how messages are perceived by others.</p>
-    <img src="/img/img1.png" alt="Non-verbal Communication Tips" width="600">
+            /* Cân đối header và container với cùng chiều rộng */
+            header {
+                background-color: #4CAF50;
+                color: white;
+                padding: 20px 0;
+                text-align: center;
+                font-size: 30px;  /* Giảm kích thước chữ của header */
+                width: 85%;
+                max-width: 1200px;
+                margin: 0 auto;
+            }
 
-    <h2>Active Listening</h2>
-    <p>Active listening is crucial for ensuring that both parties in a conversation understand each other. It involves not only hearing what is being said but also understanding the underlying message and responding thoughtfully.</p>
+            /* Cân đối chiều rộng của container với header */
+            .container {
+                width: 80%;
+                max-width: 1200px;
+                margin: 20px auto;
+                background: white;
+                padding: 30px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
 
-    <h2>Conclusion</h2>
-    <p>Improving workplace communication can lead to better collaboration and a more productive environment. Practice active listening and be mindful of non-verbal cues in your daily interactions.</p>
-</body>
+            h1, h2 {
+                margin: 20px 0;
+                text-align: center;
+                font-size: 23px;  /* Giảm kích thước chữ cho các tiêu đề */
+            }
+
+            p {
+                text-align: justify;
+                margin: 15px 0;
+            }
+
+            /* Định dạng hình ảnh và chú thích */
+            figure {
+                margin: 20px auto;
+                text-align: center;
+            }
+
+            img {
+                display: block;
+                margin: 0 auto;
+                max-width: 100%;
+            }
+
+            figcaption {
+                font-style: italic;
+                color: #555;  /* Thay đổi màu chữ cho chú thích để dễ nhìn hơn */
+                margin-top: 10px;
+                font-size: 13px;  /* Giảm kích thước chữ cho chú thích */
+            }
+
+
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>Effective Workplace Communication</h1>
+        </header>
+
+        <div class="container">
+            <h2>Introduction</h2>
+            <p>Workplace communication is essential for ensuring that teams work efficiently and collaboratively. Effective communication involves understanding both verbal and non-verbal cues, listening actively, and providing constructive feedback.</p>
+
+            <h2>Non-verbal Communication</h2>
+            <p>Non-verbal communication includes body language, facial expressions, and eye contact. These signals can greatly influence how messages are perceived by others. Below is an example of non-verbal communication:</p>
+
+            <!-- Image Example with Caption -->
+            <figure>
+                <img src="img/img1.png" alt="Non-verbal Communication Example 1" width="600">
+                <figcaption>Figure 1: Example of Non-verbal Communication through body language.</figcaption>
+            </figure>
+
+            <h2>Active Listening</h2>
+            <p>Active listening is crucial for ensuring that both parties in a conversation understand each other. It involves not only hearing what is being said but also understanding the underlying message and responding thoughtfully.</p>
+
+            <!-- Another Image Example with Caption -->
+            <figure>
+                <img src="img/img2.jpg" alt="Active Listening Example" width="600">
+                <figcaption>Figure 2: Active Listening in action during a conversation.</figcaption>
+            </figure>
+
+            <h2>Conclusion</h2>
+            <p>Improving workplace communication can lead to better collaboration and a more productive environment. Practice active listening and be mindful of non-verbal cues in your daily interactions.</p>
+        </div>
+
+    </body>
 </html>
